# surway

./: .gitignore  CNAME  Cargo.toml  Dockerfile-trunk  README.md  Trunk.toml  browserconfig.xml  debug-release.sh  index-12316a19b5028cfd.js  index-12316a19b5028cfd_bg.wasm  index-1d052182ad4f042f.js  index-1d052182ad4f042f_bg.wasm  index-2551245b2e840e8.js  index-2551245b2e840e8_bg.wasm  index-2fc83eb39e82f3e2.js  index-2fc83eb39e82f3e2_bg.wasm  index-3dc7c2009816f2ac.js  index-3dc7c2009816f2ac_bg.wasm  index-3df23b744cac20af.js  index-3df23b744cac20af_bg.wasm  index-4359877d2997ee3c.css  index-44084d9af33d1399.js  index-44084d9af33d1399_bg.wasm  index-4c0cb9c939cc39d4.js  index-4c0cb9c939cc39d4_bg.wasm  index-4ed56c10975056dc.css  index-4f009840ce0da8f.js  index-4f009840ce0da8f_bg.wasm  index-558fd2107fd99962.js  index-558fd2107fd99962_bg.wasm  index-6050b8b8451e3ace.css  index-6bbbf91651735785.js  index-6bbbf91651735785_bg.wasm  index-745153ee995f7934.css  index-79790addbd5eb2fb.js  index-79790addbd5eb2fb_bg.wasm  index-7fdf10a24082e965.css  index-99f6397fa1a82974.js  index-99f6397fa1a82974_bg.wasm  index-9af66b9afb989d9.js  (+37 more)
$BRANCH_NAME/: index-6d383af8e7c54a68.js  index-6d383af8e7c54a68_bg.wasm  index-8270d89f29680569.css  index.html
.github/workflows/: deploy.yml
cypress/: cypress.json  package-lock.json  package.json
cypress/cypress/integration/: surway.spec.js
cypress/cypress/plugins/: index.js
icons/: locate.svg:Zone.Identifier  pen.svg:Zone.Identifier
js/: defined-in-js.js  index.js
rustdoc/: std__io__Read - Rust.html
rustdoc/std__io__Read - Rust_files/: rustdoc1.53.0.css  storage1.53.0.js.download
src/: bindings.rs  geo.rs  lib.rs  main.rs  map.rs  model.rs  osm.rs  topology.rs  util.rs
src/favicon/: site.webmanifest
src/icons/: trash.svg:Zone.Identifier
src/styles/: index.scss
src/styles/spectre/: _buttons.scss  _cards.scss  _forms.scss  _layout.scss  _sliders.scss  _variables.scss  spectre.scss
src/styles/spectre/mixins/: _avatar.scss
static/: index.html
tools/osm-chunk-sizer/: Cargo.toml  results.md
tools/osm-chunk-sizer/gpx/: wow.gpx
tools/osm-chunk-sizer/src/: geo.rs  main.rs
trunk-docker/: Dockerfile  build.sh
