[package]
name = "surway"
version = "0.1.0"
authors = ["Tor Hovland <tor.hovland@bekk.no>"]
edition = "2018"

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]    

[dependencies]
cfg-if = "1.0.0"
console_log = { version = "0.2.0", features = ["color"] }
gloo-events = "0.1.1"
leaflet = { git = "https://github.com/torhovland/leaflet-rs.git" }
log = "0.4.14"
quick-xml = { version = "0.22.0", features = ["serialize"] }
rand = "0.8.3"
seed = "0.8.0"
serde = "1.0.125"
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures", branch = "screen-wake-lock" }
web-sys-wake-lock = { path = "../wasm-bindgen/crates/web-sys", package = "web-sys", branch = "screen-wake-lock", features = ["console", "Geolocation", "HtmlAnchorElement", "Navigator", "PositionOptions", "WakeLock", "Window"] }

[patch.crates-io]
js-sys = { path = "../wasm-bindgen/crates/js-sys", branch = "screen-wake-lock" }
wasm-bindgen = { path = "../wasm-bindgen", branch = "screen-wake-lock", version = "0.2.73" }
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures", branch = "screen-wake-lock", version = "0.4.23" }
wasm-bindgen-shared = { path = "../wasm-bindgen/crates/shared", branch = "screen-wake-lock", version = "0.2.68" }
web-sys = { path = "../wasm-bindgen/crates/web-sys", branch = "screen-wake-lock", features = ["console", "Geolocation", "HtmlAnchorElement", "Navigator", "PositionOptions", "WakeLock", "Window"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
