[package]
name = "surway"
version = "0.1.0"
authors = ["Tor Hovland <tor.hovland@bekk.no>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
console_log = { version = "0.2.0", features = ["color"] }
gloo-events = "0.1.1"
leaflet = "0.2.1"
log = "0.4.14"
quick-xml = { version = "0.22.0", features = ["serialize"] }
rand = "0.8.4"
seed = "0.8.0"
serde = "1.0.143"
urlencoding = "2.1.0"
web-sys = { version = "0.3.55", features = ["DomTokenList", "Element", "Geolocation", "HtmlAnchorElement", "Navigator", "PositionOptions", "WakeLock", "WakeLockType", "WakeLockSentinel"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
